# elabftw-mcp-server

./: .env.example  .gitignore  ADDING_FEATURES.md  BOOKING_SUMMARY.md  CHANGELOG.md  CLAUDE.md  README.md  booking_implementation.py  elabftw_mcp_server.py  explore_api.py  pyproject.toml  requirements.txt  test_bookings.py
